bolt-health-app/src/Elements/Navbar/Navbar.css
.icons {
    color: black;
    height: 40px;
    width: 40px;
}

.invert {
    filter: invert(100%);
}

.navbar {
    background-color: #058B8C;
    height: 80px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.menu-bars {
    margin-left: 14px;
    font-size: 14px;
    background: none;
}

.nav-menu {
    background-color: #058B8C;
    width: 250px;
    height: 100vh;
    display: flex;
    justify-content: center;
    position: fixed;
    top: 0;
    left: -100%;
    transition: 850ms;
}

.nav-menu.active {
    left: 0;
    transition: 400ms;
}

.nav-text {
    display: flex;
    justify-content: flex-start;
    align-items: left;
    padding: 14px 0px 14px 1px;
    margin: 14px 0px 14px 0px;
    list-style: none;
    height: 60px;
    font-family: 'Cabin', sans-serif;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.nav-text a {
    text-decoration: none;
    color: white;
    font-size: 36px;
    width: 95%;
    height: 100%;
    display: flex;
    align-items: center;
    padding: 0 16px;
    border-radius: 4px;
    font-family: 'Cabin', sans-serif;
}

.nav-menu-items {
    width: 100%;
}

.navbar-toggle {
    background-color: #058B8C;
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.navTitle {
    margin-left: 14px;
}

.pad {
    height: 80px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

